# django-angular-cats-chat

./: .gitignore  docker-compose.yml  readme.md
back-end/: Dockerfile  pyproject.toml
back-end/api/: db.sqlite3
back-end/api/api/: asgi.py  consumers.py  middleware.py  settings.py  urls.py
back-end/api/cats/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
front-end/: Dockerfile
front-end/src/app/: app-routing.module.ts  app.module.ts  auth.interceptor.ts
front-end/src/app/components/add-cat/: add-cat.component.html  add-cat.component.spec.ts  add-cat.component.ts
front-end/src/app/components/add-user/: add-user.component.html  add-user.component.ts
front-end/src/app/components/cat-details/: cat-details.component.html  cat-details.component.ts
front-end/src/app/components/cats-list/: cats-list.component.html  cats-list.component.spec.ts  cats-list.component.ts
front-end/src/app/components/chat/: chat.component.html  chat.component.ts
front-end/src/app/components/login-user/: login-user.component.html  login-user.component.ts
front-end/src/app/components/logout-user/: logout-user.component.html  logout-user.component.spec.ts  logout-user.component.ts
front-end/src/app/models/: cat.model.ts  message.model.ts  user.model.ts
front-end/src/app/services/: auth.service.ts  cat.service.ts  chat.service.ts  user.service.ts
